Continuing to harden
